Updated some css in style.css and styleFav.css to make sure imageDescriptionContainer is aligned to center

--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ input::placeholder{
     /* align-items: center; */
     flex-wrap: wrap;
     height: auto;
-    width: 90%;
+    width: 100%;
 
 }
 
@@ -336,13 +336,14 @@ input::placeholder{
 
 /* CSS FOR SECTIONS IN SUPERHERO PAGE */
 .section{
-    width: 90%;
+    width: 100%;
 }
 
 .section h3{
     width: 100%;
     color: white;
-    text-align: left;
+    text-align: center;
+    margin: 1%;
 }
 
 
